--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
+    <title>NordStudio</title>
+    <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,13 +13,13 @@
     <header>
       <nav>
         <ul>
-          <li><a href=""></a>Послуги</li>
-          <li><a href=""></a>Портфоліо</li>
+          <li><a href="">Послуги</a></li>
+          <li><a href="">Портфоліо</a></li>
         </ul>
         <ul>
           <li>
             <a href=""
-              ><img src="./images/logo1.png" alt="Логотип" width="100px"
+              ><img src="./images/logo2.png" alt="Логотип" width="100px"
             /></a>
           </li>
         </ul>
