html розмітка + шрифти

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -19,7 +25,7 @@
         <ul>
           <li>
             <a href=""
-              ><img src="./images/logo2.png" alt="Логотип" width="100px"
+              ><img src="./images/logo2.png" alt="Логотип" width="226"
             /></a>
           </li>
         </ul>
@@ -29,7 +35,139 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <!-----
+      Секція 1
+      ----->
+      <section>
+        <div>
+          <div>
+            <p>
+              <span>Nord Studio</span> - розробники, що вміють читати думки<br /><br />Команда
+              сертифікованих спеціалістів виконає ваше замовлення якісно та
+              швидко
+            </p>
+            <a href="">ЗАМОВИТИ ПОСЛУГУ</a>
+          </div>
+          <div>
+            <img
+              src="./images/p0-3.png"
+              alt="ілюстрація процесу розробки"
+              width="626"
+            />
+          </div>
+        </div>
+      </section>
+      <!-----
+      Секція 2
+      ----->
+      <section>
+        <div>
+          <div>
+            <img src="./images/logo2.png" alt="логотип" width="626" />
+          </div>
+          <div>
+            <p>Замовивши розробку вашого веб-сайту в нас ви отримаєте:</p>
+            <ul>
+              <li>Дизайн сайту</li>
+              <li>Розробку сайту</li>
+              <li>SEO оптимізацію сайту</li>
+              <li>Посадку сайту на CMS</li>
+              <li>Наступний супровід сайту</li>
+              <li>Анекдот від Павла</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-----
+      Секція 3
+      ----->
+      <section>
+        <h2>Портфоліо</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><img src="./images/s1.jpg" alt="зразок сайту 1" width="470" />
+              <p>FRECS ChessClub</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/s2.jpg" alt="зразок сайту 2" width="470" />
+              <p>Ukraine</p></a
+            >
+          </li>
+          <li>
+            <a href=""
+              ><img src="./images/s3.jpg" alt="зразок сайту 3" width="470" />
+              <p>KNUgle</p></a
+            >
+          </li>
+        </ul>
+      </section>
+      <!-----
+      Секція 4
+      ----->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <div>
+              <div>
+                <p>
+                  ТАРАСЮК Василь<br /><br />Дизайн<br />Фронт-Енд<br />Тестування<br />Деплой
+                </p>
+              </div>
+              <div>
+                <img src="./images/p1.jpg" alt="розробник 1" width="357" />
+              </div>
+            </div>
+            <div>
+              <div></div>
+              <div>
+                <p>50%</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div>
+              <div>
+                <img src="./images/p2.jpg" alt="розробник 2" width="357" />
+              </div>
+              <div>
+                <p>
+                  СЕРЕДЮК Павло<br /><br />Бек-Енд<br />Бази даних<br />Тестування<br />Деплой
+                </p>
+              </div>
+            </div>
+            <div>
+              <div>
+                <p>50%</p>
+              </div>
+              <div></div>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <!-----
+      Секція 5
+      ----->
+      <section>
+        <div>
+          <div>
+            <p>
+              Заповнюйте бриф за посиланням та моментально отримуйте лист на
+              вашу адресу з оцінкою вартості та термінів виконання замовлення<br /><br />Наш
+              поштовий бот <span>VIKING</span> працює цілодобово
+            </p>
+            <a href="">ЗАПОВНИТИ БРИФ</a>
+          </div>
+          <div>
+            <img src="./images/p3.png" alt="картинка списку" width="626" />
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
