--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="">Послуги</a></li>
-          <li><a href="">Портфоліо</a></li>
+    <header class="header">
+      <nav class="nav">
+        <ul class="ul-first">
+          <li><a href="#services" class="a-first ul-second">Послуги</a></li>
+          <li><a href="" class="a-first ul-second">Портфоліо</a></li>
         </ul>
         <ul>
           <li>
-            <a href=""
-              ><img src="./images/logo2.png" alt="Логотип" width="226"
+            <a href="" class="logo"
+              ><img src="./images/logo2.png" alt="Логотип" width="150px"
             /></a>
           </li>
         </ul>
-        <ul>
-          <li><a href="">Вартість</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="ul-first">
+          <li><a href="" class="a-first ul-second">Вартість</a></li>
+          <li><a href="" class="a-first ul-second">Контакти</a></li>
         </ul>
       </nav>
     </header>
@@ -39,21 +39,21 @@
       <!-----
       Секція 1
       ----->
-      <section>
-        <div>
-          <div>
-            <p>
+      <section class="section-first">
+        <div class="div-first">
+          <div class="div-second">
+            <p class="p-first">
               <span>Nord Studio</span> - розробники, що вміють читати думки<br /><br />Команда
               сертифікованих спеціалістів виконає ваше замовлення якісно та
               швидко
             </p>
-            <a href="">ЗАМОВИТИ ПОСЛУГУ</a>
+            <a href="" class="a-second">ЗАМОВИТИ ПОСЛУГУ</a>
           </div>
-          <div>
+          <div class="div-third">
             <img
               src="./images/p0-3.png"
               alt="ілюстрація процесу розробки"
-              width="626"
+              class="img-first"
             />
           </div>
         </div>
@@ -61,7 +61,7 @@
       <!-----
       Секція 2
       ----->
-      <section>
+      <section class="section-second" id="services">
         <div>
           <div>
             <img src="./images/logo2.png" alt="логотип" width="626" />
