--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <nav class="nav">
         <ul class="ul-first">
           <li><a href="#services" class="a-first ul-second">Послуги</a></li>
-          <li><a href="" class="a-first ul-second">Портфоліо</a></li>
+          <li><a href="#portfolio" class="a-first ul-second">Портфоліо</a></li>
         </ul>
         <ul>
           <li>
-            <a href="" class="logo"
+            <a href="#" class="logo"
               ><img src="./images/logo2.png" alt="Логотип" width="150px"
             /></a>
           </li>
@@ -62,13 +62,15 @@
       Секція 2
       ----->
       <section class="section-second" id="services">
-        <div>
-          <div>
-            <img src="./images/logo2.png" alt="логотип" width="626" />
+        <div class="div-2">
+          <div class="div-2-1">
+            <img src="./images/logo2.png" alt="логотип" class="img-2-1" />
           </div>
-          <div>
-            <p>Замовивши розробку вашого веб-сайту в нас ви отримаєте:</p>
-            <ul>
+          <div class="div2-2">
+            <p class="p2-1">
+              Замовивши розробку вашого веб-сайту в нас ви отримаєте:
+            </p>
+            <ul class="ul2-1">
               <li>Дизайн сайту</li>
               <li>Розробку сайту</li>
               <li>SEO оптимізацію сайту</li>
@@ -82,25 +84,46 @@
       <!-----
       Секція 3
       ----->
-      <section>
-        <h2>Портфоліо</h2>
-        <ul>
+      <section class="section-third" id="portfolio">
+        <h2 class="h">Портфоліо</h2>
+        <ul class="ul-3-1">
           <li>
-            <a href=""
-              ><img src="./images/s1.jpg" alt="зразок сайту 1" width="470" />
-              <p>FRECS ChessClub</p></a
+            <a
+              href="https://elvent0.github.io/FrecsChessClub/"
+              target="_blank"
+              class="a-3-1"
+              ><img
+                src="./images/s1.jpg"
+                alt="зразок сайту 1"
+                width="470"
+                class="br-3-1"
+              />
+              <div class="b-1"><p class="p-3-1">FRECS ChessClub</p></div></a
             >
           </li>
           <li>
-            <a href=""
-              ><img src="./images/s2.jpg" alt="зразок сайту 2" width="470" />
-              <p>Ukraine</p></a
+            <a href="" class="a-3-1" target="_blank"
+              ><img
+                src="./images/s2.jpg"
+                alt="зразок сайту 2"
+                width="470"
+                class="br-3-1"
+              />
+              <div class="b-2"><p class="p-3-1">Ukraine</p></div></a
             >
           </li>
           <li>
-            <a href=""
-              ><img src="./images/s3.jpg" alt="зразок сайту 3" width="470" />
-              <p>KNUgle</p></a
+            <a
+              href="https://elvent0.github.io/KNUgle/"
+              class="a-3-1"
+              target="_blank"
+              ><img
+                src="./images/s3.jpg"
+                alt="зразок сайту 3"
+                width="470"
+                class="br-3-1"
+              />
+              <div class="b-3"><p class="p-3-1">KNUgle</p></div></a
             >
           </li>
         </ul>
@@ -108,7 +131,7 @@
       <!-----
       Секція 4
       ----->
-      <section>
+      <section class="section-fourth">
         <h2>Наша команда</h2>
         <ul>
           <li>
@@ -152,7 +175,7 @@
       <!-----
       Секція 5
       ----->
-      <section>
+      <section class="section-fifth">
         <div>
           <div>
             <p>
