--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           </li>
         </ul>
         <ul class="ul-first">
-          <li><a href="" class="a-first ul-second">Вартість</a></li>
-          <li><a href="" class="a-first ul-second">Контакти</a></li>
+          <li><a href="#price" class="a-first ul-second">Вартість</a></li>
+          <li><a href="#contacts" class="a-first ul-second">Контакти</a></li>
         </ul>
       </nav>
     </header>
@@ -64,7 +64,7 @@
       <section class="section-second" id="services">
         <div class="div-2">
           <div class="div-2-1">
-            <img src="./images/logo2.png" alt="логотип" class="img-2-1" />
+            <img src="./images/logo3.png" alt="логотип" class="img-2-1" />
           </div>
           <div class="div2-2">
             <p class="p2-1">
@@ -132,42 +132,44 @@
       Секція 4
       ----->
       <section class="section-fourth">
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <div>
-              <div>
-                <p>
-                  ТАРАСЮК Василь<br /><br />Дизайн<br />Фронт-Енд<br />Тестування<br />Деплой
+        <h2 class="h2">Наша команда</h2>
+        <ul class="ul-4-1">
+          <li class="li-4-1">
+            <div class="div-4-1">
+              <div class="div-4-2">
+                <p class="p-4-1-1">
+                  <span class="span-1">ТАРАСЮК Василь</span><br /><br />UX/UI
+                  дизайн<br />Фронт-Енд<br />Тестування<br />Деплой
                 </p>
               </div>
               <div>
-                <img src="./images/p1.jpg" alt="розробник 1" width="357" />
+                <img src="./images/p1.jpg" alt="розробник 1" width="300" />
               </div>
             </div>
-            <div>
-              <div></div>
-              <div>
-                <p>50%</p>
+            <div class="div-4-0">
+              <div class="div-4-3"></div>
+              <div class="div-4-4">
+                <p class="p-4-2">50%</p>
               </div>
             </div>
           </li>
           <li>
-            <div>
+            <div class="div-4-1">
               <div>
-                <img src="./images/p2.jpg" alt="розробник 2" width="357" />
+                <img src="./images/p2.jpg" alt="розробник 2" width="300" />
               </div>
-              <div>
-                <p>
-                  СЕРЕДЮК Павло<br /><br />Бек-Енд<br />Бази даних<br />Тестування<br />Деплой
+              <div class="div-4-2">
+                <p class="p-4-1-2">
+                  <span class="span-1">СЕРЕДЮК Павло</span
+                  ><br /><br />Бек-Енд<br />Бази даних<br />Тестування<br />Деплой
                 </p>
               </div>
             </div>
-            <div>
-              <div>
-                <p>50%</p>
+            <div class="div-4-0">
+              <div class="div-4-4">
+                <p class="p-4-3">50%</p>
               </div>
-              <div></div>
+              <div class="div-4-3"></div>
             </div>
           </li>
         </ul>
@@ -175,22 +177,36 @@
       <!-----
       Секція 5
       ----->
-      <section class="section-fifth">
+      <section class="section-fifth" id="price">
         <div>
-          <div>
-            <p>
-              Заповнюйте бриф за посиланням та моментально отримуйте лист на
-              вашу адресу з оцінкою вартості та термінів виконання замовлення<br /><br />Наш
-              поштовий бот <span>VIKING</span> працює цілодобово
+        <div class="div-first">
+          <div class="div-second">
+            <p class="p-first">
+              Заповнюйте бриф за посиланням та моментально отримуйте лист на вашу адресу з оцінкою вартості та термінів виконання замовлення
+              <br /><br />Наш поштовий бот <span>VIKING</span> працює цілодобово  
             </p>
-            <a href="">ЗАПОВНИТИ БРИФ</a>
+            <a href="" class="a-second">ЗАПОВНИТИ БРИФ</a>
           </div>
-          <div>
-            <img src="./images/p3.png" alt="картинка списку" width="626" />
+          <div class="div-third">
+            <img
+              src="./images/p3.png"
+              alt="ілюстрація процесу розробки"
+              class="img-first-2"
+            />
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer id="contacts">
+      <div class="footer">
+        <div><img class="footer-img" src="../images/logo2.png" alt="лого" width="150"></div>
+        <div>
+          <ul>
+            <li class="footer-li"><a class="footer-a" href="mailto:">mail1@knu.ua</a></li>
+            <li class="footer-li"><a class="footer-a" href="mailto:">mail2@knu.ua</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
