Все крім модального вікна + правки

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               сертифікованих спеціалістів виконає ваше замовлення якісно та
               швидко
             </p>
-            <a href="" class="a-second">ЗАМОВИТИ ПОСЛУГУ</a>
+            <a href="#price" class="a-second">ЗАМОВИТИ ПОСЛУГУ</a>
           </div>
           <div class="div-third">
             <img
@@ -71,12 +71,20 @@
               Замовивши розробку вашого веб-сайту в нас ви отримаєте:
             </p>
             <ul class="ul2-1">
-              <li>Дизайн сайту</li>
-              <li>Розробку сайту</li>
-              <li>SEO оптимізацію сайту</li>
-              <li>Посадку сайту на CMS</li>
-              <li>Наступний супровід сайту</li>
-              <li>Анекдот від Павла</li>
+              <li class="li-2-1">
+                <details open>
+                  <summary>&nbsp&nbsp Дизайн сайту</summary>
+                <p class="p-2-2">Наш UX/UI дизайнер запропонує вам ідеальний дизайн для вашої аудиторії</p></details></li>
+              <li class="li-2-1"><details class="details1"><summary>&nbsp&nbsp Розробку сайту</summary>
+                <p class="p-2-2">Наші спеціалісти напишуть ваш сайт з використанням найсучасніших методів розробки</p></details></li>
+              <li class="li-2-1"><details><summary>&nbsp&nbsp SEO оптимізацію сайту</summary>
+                <p class="p-2-2">Наш SEO-спеціаліст запропонує найефективнішу стратегію просування</p></details></li>
+              <li class="li-2-1"><details><summary>&nbsp&nbsp Посадку сайту на CMS</summary>
+                <p class="p-2-2">Для зручності керування контентом ми посадимо ваш сайт на найсучаснішу CMS</p></details></li>
+              <li class="li-2-1"><details><summary>&nbsp&nbsp Наступний супровід сайту</summary>
+                <p class="p-2-2">Завжди будемо раді продовжити співпрацю</p></details></li>
+              <li class="li-2-2"><details><summary>&nbsp&nbsp Анекдот від Павла</summary>
+                <p class="p-2-2">... або в бубен від Василя</p></details></li>
             </ul>
           </div>
         </div>
@@ -136,29 +144,29 @@
         <ul class="ul-4-1">
           <li class="li-4-1">
             <div class="div-4-1">
-              <div class="div-4-2">
+              <div class="div-4-2 br-4-4">
                 <p class="p-4-1-1">
                   <span class="span-1">ТАРАСЮК Василь</span><br /><br />UX/UI
                   дизайн<br />Фронт-Енд<br />Тестування<br />Деплой
                 </p>
               </div>
-              <div>
-                <img src="./images/p1.jpg" alt="розробник 1" width="300" />
+              <div class="img-div img-div-1">
+                <img src="./images/p1.jpg" alt="розробник 1" class="img-4-1 br-4-3" />
               </div>
             </div>
             <div class="div-4-0">
-              <div class="div-4-3"></div>
-              <div class="div-4-4">
+              <div class="div-4-3 br-4-4"></div>
+              <div class="div-4-4 br-4-3">
                 <p class="p-4-2">50%</p>
               </div>
             </div>
           </li>
           <li>
             <div class="div-4-1">
-              <div>
-                <img src="./images/p2.jpg" alt="розробник 2" width="300" />
+              <div class="img-div img-div-2">
+                <img src="./images/p2.jpg" alt="розробник 2" class="img-4-1 br-4-4" />
               </div>
-              <div class="div-4-2">
+              <div class="div-4-2 br-4-3">
                 <p class="p-4-1-2">
                   <span class="span-1">СЕРЕДЮК Павло</span
                   ><br /><br />Бек-Енд<br />Бази даних<br />Тестування<br />Деплой
@@ -166,10 +174,10 @@
               </div>
             </div>
             <div class="div-4-0">
-              <div class="div-4-4">
+              <div class="div-4-4 br-4-4">
                 <p class="p-4-3">50%</p>
               </div>
-              <div class="div-4-3"></div>
+              <div class="div-4-3 br-4-3"></div>
             </div>
           </li>
         </ul>
