--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </main>
     <footer id="contacts">
       <div class="footer">
-        <div><img class="footer-img" src="../images/logo2.png" alt="лого" width="150"></div>
+        <div><img class="footer-img" src="./images/logo2.png" alt="лого" width="150"></div>
         <div>
           <ul>
             <li class="footer-li"><a class="footer-a" href="mailto:">mail1@knu.ua</a></li>
