--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
   </head>
   <body>
+    <div class="all">
     <header class="header">
       <nav class="nav">
         <ul class="ul-first">
@@ -266,5 +267,6 @@
         </div>
       </div>
     </footer>
+    </div>
   </body>
 </html>
