--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
     <footer id="contacts">
       <div class="footer">
         <div><img class="footer-img" src="./images/logo2.png" alt="лого" width="150"></div>
-        <div>
+        <address>
           <ul>
             <li class="footer-li"><a class="footer-a" href="mailto:">mail1@knu.ua</a></li>
             <li class="footer-li"><a class="footer-a" href="mailto:">mail2@knu.ua</a></li>
           </ul>
-        </div>
+        </address>
       </div>
     </footer>
     </div>
