--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
         <ul>
           <li>
-            <a href="#" class="logo"
+            <a href="#studio" class="logo"
               ><img src="./images/logo2.png" alt="Логотип" width="150px"
             /></a>
           </li>
@@ -36,11 +36,24 @@
         </ul>
       </nav>
     </header>
+
+<a href="" class="support-ua">
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+  <p>Підтримай Україну!</p>
+</a>
+    
     <main>
       <!-----
       Секція 1
       ----->
-      <section class="section-first">
+      <section class="section-first" id="studio">
         <div class="div-first">
           <div class="div-second">
             <p class="p-first">
@@ -48,7 +61,10 @@
               сертифікованих спеціалістів виконає ваше замовлення якісно та
               швидко
             </p>
+            <div>
             <a href="#price" class="a-second">ЗАМОВИТИ ПОСЛУГУ</a>
+            <a href="#openModal-gu" class="a-second third">СЛАВА УКРАЇНІ</a>
+          </div>
           </div>
           <div class="div-third">
             <img
@@ -56,6 +72,17 @@
               alt="ілюстрація процесу розробки"
               class="img-first"
             />
+          </div>
+        </div>
+        <div id="openModal-gu" class="modal">
+          <div class="modal-dialog">
+            <div class="modal-content top">
+              <div class="modal-body">
+                <img src="./images/vg.jpg" width="80%" alt="Героям Слава!" class="mw">
+                <a type="submit" class="btn" href="#close" title="Поставте 100 балів" class="close">Героям Слава!</a><br>
+
+              </div>
+            </div>
           </div>
         </div>
       </section>
