--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
     </header>
 
 <a href="" class="support-ua">
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
-  <p>Підтримай Україну!</p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
+  <p>Практична робота </p>
 </a>
     
     <main>
