--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
         <ul>
           <li>
-            <a href="#studio" class="logo"
+            <a href="#" class="logo"
               ><img src="./images/logo2.png" alt="Логотип" width="150px"
             /></a>
           </li>
@@ -89,7 +89,8 @@
       <!-----
       Секція 2
       ----->
-      <section class="section-second" id="services">
+      <section class="section-second">
+        <div class="hidden" id="services"></div>
         <div class="div-2">
           <div class="div-2-1">
             <img src="./images/logo3.png" alt="логотип" class="img-2-1" />
@@ -214,7 +215,7 @@
       Секція 5
       ----->
       <section class="section-fifth" id="price">
-        <div>
+        <div class="section-fifth-one">
         <div class="div-first">
           <div class="div-second">
             <p class="p-first">
