--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <ul class="about-us__list">
               <li class="about-us__item">
                 <details open class="about-us__details">
-                  <summary class="about-us__summary">&nbsp&nbsp Дизайн сайту</summary>
+                  <summary class="about-us__summary">Дизайн сайту</summary>
                   <p class="about-us__paragraph">
                     Наш UX/UI дизайнер запропонує вам ідеальний дизайн для вашої
                     аудиторії
@@ -128,7 +128,7 @@
               </li>
               <li class="about-us__item">
                 <details class="about-us__details">
-                  <summary class="about-us__summary">&nbsp&nbsp Розробку сайту</summary>
+                  <summary class="about-us__summary">Розробку сайту</summary>
                   <p class="about-us__paragraph">
                     Наші спеціалісти напишуть ваш сайт з використанням
                     найсучасніших методів розробки
@@ -137,7 +137,7 @@
               </li>
               <li class="about-us__item">
                 <details class="about-us__details">
-                  <summary class="about-us__summary">&nbsp&nbsp SEO оптимізацію сайту</summary>
+                  <summary class="about-us__summary">SEO оптимізацію сайту</summary>
                   <p class="about-us__paragraph">
                     Наш SEO-спеціаліст запропонує найефективнішу стратегію
                     просування
@@ -146,7 +146,7 @@
               </li>
               <li class="about-us__item">
                 <details class="about-us__details">
-                  <summary class="about-us__summary">&nbsp&nbsp Посадку сайту на CMS</summary>
+                  <summary class="about-us__summary">Посадку сайту на CMS</summary>
                   <p class="about-us__paragraph">
                     Для зручності керування контентом ми посадимо ваш сайт на
                     найсучаснішу CMS
@@ -155,7 +155,7 @@
               </li>
               <li class="about-us__item">
                 <details class="about-us__details">
-                  <summary class="about-us__summary">&nbsp&nbsp Наступний супровід сайту</summary>
+                  <summary class="about-us__summary">Наступний супровід сайту</summary>
                   <p class="about-us__paragraph">
                     Завжди будемо раді продовжити співпрацю
                   </p>
@@ -163,7 +163,7 @@
               </li>
               <li class="about-us__item">
                 <details class="about-us__details">
-                  <summary class="about-us__summary">&nbsp&nbsp Анекдот від Павла</summary>
+                  <summary class="about-us__summary">Анекдот від Павла</summary>
                   <p class="about-us__paragraph">... або в бубен від Василя</p>
                 </details>
               </li>
@@ -315,6 +315,7 @@
                 <p style="margin-top: 40px" class="modal__paragraph">
                 <b>Надайте, будь ласка, наступну інформацію для розрахунку вартості</b><br>
                 </p>
+                <form action="">
                 <ul class="modal__list">
                   <li class="modal__item">
                 <p class="modal__item_paragraph">Ваше ПІБ:</p>
@@ -341,16 +342,17 @@
               /></li>
               <li class="modal__item">
                 <p class="modal__item_paragraph">Кількість сторінок сайту:</p>
-                <input type="number" step="1" min="1" max="10" value="1" id="pages" name="pages"/>
+                <input class="modal__input" type="number" step="1" min="1" max="10" value="1" id="pages" name="pages"/>
                 </li>
                 <li class="modal__item">
                 <p class="modal__item_paragraph">Тип сайту:</p>
-                <select name="" id="">
+                <select name="" id="" class="modal__input">
                   <option value="">Шаблонний</option>
                   <option value="">Персоналізований</option>
                 </select>
                 </li>
-                </ul><br>
+                </ul>
+                </form>
                 <button type="submit" class="modal__button">Надіслати дані</button><br>
               </div>
             </div>
@@ -379,5 +381,6 @@
         </div>
       </div>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
