--- a/index.html
+++ b/index.html
@@ -243,13 +243,15 @@
             <li class="team__item_left">
               <div class="team__part_top">
                 <div class="team__developer team__developer_left">
+                  <div>
                   <h3 class="team__name">Тарасюк Василь</h3>
                   <ul class="team__skills">
-                    <li class="team__skills-item">Дизайн</li>
-                    <li class="team__skills-item">Фронт-Енд</li>
-                    <li class="team__skills-item">Тестування</li>
-                    <li class="team__skills-item">Деплой</li>
+                    <li class="team__skills-item">UI/UX Дизайн</li>
+                    <li class="team__skills-item">Семантична верстка</li>
+                    <li class="team__skills-item">Буде додано пункт*</li>
+                    <li class="team__skills-item">Буде додано пункт*</li>
                   </ul>
+                </div>
                 </div>
                 <div class="team__developer_image">
                   <img
@@ -276,13 +278,15 @@
                   />
                 </div>
                 <div class="team__developer team__developer_right">
+                  <div>
                   <h3 class="team__name">Середюк Павло</h3>
                   <ul class="team__skills">
                     <li class="team__skills-item">Бек-Енд</li>
-                    <li class="team__skills-item">Бази даних</li>
-                    <li class="team__skills-item">Тестування</li>
-                    <li class="team__skills-item">Деплой</li>
+                    <li class="team__skills-item">Буде додано пункт*</li>
+                    <li class="team__skills-item">Буде додано пункт*</li>
+                    <li class="team__skills-item">Буде додано пункт*</li>
                   </ul>
+                  </div>
                 </div>
               </div>
               <div class="team__part_bottom">
