--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
         <nav class="header__navigation">
           <ul class="header__list">
             <li class="header__item">
-              <a href="#about-us" class="header__link">Послуги</a>
-            </li>
-            <li class="header__item">
-              <a href="#portfolio" class="header__link">Портфоліо</a>
-            </li>
-                        <li class="header__item">
-              <a href="#price" class="header__link">Вартість</a>
-            </li>
-            <li class="header__item">
               <a href="#" class="header__link">
                 <img
                   src="./images/logo2.png"
@@ -48,6 +39,19 @@
                 />
               </a>
             </li>
+            <li class="header__item">
+              <a href="#about-us" class="header__link">Послуги</a>
+            </li>
+            <li class="header__item">
+              <a href="#portfolio" class="header__link">Портфоліо</a>
+            </li>
+            <li class="header__item">
+              <a href="#team" class="header__link">Команда</a>
+            </li>
+                        <li class="header__item">
+              <a href="#price" class="header__link">Вартість</a>
+            </li>
+            
               <p class="header__paragraph">Авторизація:</p>
             <li class="header__item">
               
@@ -192,7 +196,7 @@
           <h2 class="portfolio__title">Портфоліо</h2>
           <ul class="portfolio__list">
             <li class="portfolio__item">
-              <a href="https://elvent0.github.io/FrecsChessClub/" target="_blank" class="portfolio__link">
+              <a href="https://elvent0.github.io/ChessClubFRECS/" target="_blank" class="portfolio__link">
                 <img
                   src="./images/s1.jpg"
                   alt="Сайт шахового клубу"
@@ -251,6 +255,7 @@
       </section>
       <!-- team -->
       <section class="team">
+        <div class="dot__team" id="team"></div>
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -277,7 +282,6 @@
                 </div>
               </div>
               <div class="team__part_bottom">
-                <div class="team__percent"></div>
                 <div class="team__percent_number">50%</div>
               </div>
             </li>
@@ -305,7 +309,6 @@
               </div>
               <div class="team__part_bottom">
                 <div class="team__percent_number__rigth">50%</div>
-                <div class="team__percent"></div>
               </div>
             </li>
             <div class="dot dot__left"></div>
@@ -331,7 +334,7 @@
               <div class="modal-body modal-body__bottom">
                 <a href="#close" title="Close" class="close">×</a>
                 <p style="margin-top: 40px" class="modal__paragraph">
-                <b>Надайте, будь ласка, наступну інформацію для розрахунку вартості</b><br>
+                <b>Надайте наступну інформацію для розрахунку<br> вартості</b><br>
                 </p>
                 <form action="">
                 <ul class="modal__list">
