--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
           <p class="hero__line-paragraph">Слава Україні</p>
           <p class="hero__line-paragraph">Слава Україні</p>
         </div>
-        <div class="">
           <div class="container hero__container">
             <div class="hero__text-content">
               <p class="hero__paragraph">
@@ -110,10 +109,9 @@
               src="./images/p0-3.png"
               alt="Ілюстрація розробки"
               class="hero__image"
-              width="600"
+              width="500"
             />
           </div>
-        </div>
         <div id="openModal-gu" class="modal">
           <div class="modal-dialog">
             <div class="modal-content top">
@@ -190,7 +188,7 @@
         </div>
       </section>
       <!-- portfolio -->
-      <div class="dot__nav" id="portfolio"></div>
+      <div class="dot__portfolio" id="portfolio"></div>
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio__title">Портфоліо</h2>
@@ -272,12 +270,12 @@
                   </ul>
                 </div>
                 </div>
-                <div class="team__developer_image">
+                <div class="team__developer_image left">
                   <img
                     src="./images/p1.jpg"
                     alt="Тарасюк Василь"
                     class="team__image team__image_left"
-                    width="300"
+                    width="270"
                   />
                 </div>
               </div>
@@ -287,12 +285,12 @@
             </li>
             <li class="team__item_right">
               <div class="team__part_top">
-                <div class="team__developer_image">
+                <div class="team__developer_image right">
                   <img
                     src="./images/p2.jpg"
                     alt="Тарасюк Василь"
                     class="team__image team__image_rigth"
-                    width="300"
+                    width="270"
                   />
                 </div>
                 <div class="team__developer team__developer_right">
