--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
           class="footer__logo"
           width="128"
         />
+        <p class="footer__paragraph">Не всі права захищені. Тому, якщо ви щось стирите, ми вас знайдемо та поламаємо ноги. <br>Гарного вам дня!</p>
         <div class="footer__contacts_center">
         <div class="footer__contacts">
           <a href="mailto:vasyl_tarasyuk@knu.ua" class="footer__link"
