--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
                 <svg width="70" height="70" class="about-us__icon">
                   <use href="./images/icons.svg#icon-display"></use>
                 </svg>
-                Розробку сайту
+                Розробка сайту
               </li>
               <li class="about-us__item">
                 <svg width="70" height="70" class="about-us__icon">
                   <use href="./images/icons.svg#icon-equalizer"></use>
                 </svg>
-                SEO оптимізацію
+                SEO оптимізація
               </li>
               <li class="about-us__item">
                 <svg width="70" height="70" class="about-us__icon">
                   <use href="./images/icons.svg#icon-folder"></use>
                 </svg>
-                Посадку на CMS
+                Посадка на CMS
               </li>
               <li class="about-us__item">
                 <svg width="70" height="70" class="about-us__icon">
