--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
                         id="name"
                         name="name"
                         required
+                        oninvalid="this.setCustomValidity('Заповни це поле, баран')"
                         minlength="4"
                         maxlength="40"
                         size="30"
@@ -371,6 +372,7 @@
                         id="email"
                         size="30"
                         required
+                        oninvalid="this.setCustomValidity('Заповни це поле, баран')"
                       />
                     </li>
                     <li class="modal__item">
